--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title>F1 Noticias</title>
@@ -13,13 +13,46 @@
 
 <body>
     <header>
-        header
+        <nav class="navbar navbar-expand-md">
+            <div class="container">
+                <a href="#" class="navbar-brand">
+                    <img src="images/logo.png" alt="" width="140px">
+                </a>
+
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-header">
+                    <i class="fas fa-bars text-white"></i>
+                </button>
+
+                <div class="collapse navbar-collapse" id="nav-header">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="" class="nav-link links-header" target="_blank">Notícias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link links-header" target="_blank">Calendário</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link links-header" target="_blank">Pilotos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link links-header" target="_blank">Equipes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="" class="nav-link links-header" target="_blank">F2</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <main>
-        principal
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </main>
     <footer>
-        footer
+        <div class="container">
+            <img src="images/logo.png" alt="" width="100px">
+            <p class="text-footer">&copy; 2003-2022 Formula One World Championship Limited</p>
+        </div>
     </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
