--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
         </nav>
     </header>
     <main>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <section class="main-section">
+            <h1 class="main-title">Confira o grid da temporada de 2022 da F1</h1>
+            <div style="text-align: center;">
+                <button class="main-button">Conferir</button>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
