--- a/index.html
+++ b/index.html
@@ -53,6 +53,27 @@
                 <button class="main-button">Conferir</button>
             </div>
         </section>
+        <section style="padding: 40px 0;">
+            <div class="container">
+                <h2>Últimas Notícias</h2>
+                <div class="divisor"></div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-8">
+                                <div class="news">
+                                    <a href="" style="text-decoration: none;">
+                                        <img src="images/sainz.jpg" alt="" class="img-news">
+                                        <h2 class="news-title">Silverstone: Carlos Sainz conquista sua primeira vitória na F1</h2>
+                                        <p class="news-text">Em corrida com acidente grave na largada, Carlos Sainz vê vitória escapar algumas vezes, mas conta com safety car e estratégia da Ferrari para triunfar; Perez é segundo e Hamilton terceiro</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
