--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
                                     </a>
                                 </div>
                             </div>
+                            <div class="col-4">
+                                <div class="next-gp">
+                                    <div style="background-color: #e10600;"><h3 class="gp-title">Próximo GP</h3></div>
+                                    <div class="gp">
+                                        <img src="images/austria.png" alt="" width="50px">
+                                        <h3>GP da Áustria</h3>
+                                    </div>
+                                    <img src="images/gp.png" alt="" width="100%">
+                                    <p class="date">Data: 10/07 10h</p>
+                                    <div style="text-align: center;">
+                                        <button class="gp-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
