--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
         <section style="padding: 40px 0;">
             <div class="container">
-                <h2>Últimas Notícias</h2>
+                <h2>Em Destaque</h2>
                 <div class="divisor"></div>
                 <div class="row">
                     <div class="col-12">
@@ -81,6 +81,46 @@
                                     <div style="text-align: center;">
                                         <button class="gp-button">Ver mais</button>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h2 style="padding-top: 30px;">Últimas Notícias</h2>
+                <div class="divisor"></div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="news">
+                                    <a href="" style="text-decoration: none;">
+                                        <img src="images/vettel.jpg" alt="" class="img-news">
+                                        <h4 class="news-title2">Vettel diz que torceu por Schumacher contra Verstappen em GP da Inglaterra</h4>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="news">
+                                    <a href="" style="text-decoration: none;">
+                                        <img src="images/perez.jpg" alt="" class="img-news">
+                                        <h4 class="news-title2">Red Bull vê Pérez como companheiro perfeito para Verstappen: “Não tenta brigar”</h4>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="news">
+                                    <a href="" style="text-decoration: none;">
+                                        <img src="images/zhou.jpg" alt="" class="img-news">
+                                        <h4 class="news-title2">“Não sei como sobrevivi”: Zhou relata detalhes de acidente assustador em Silverstone</h4>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="news">
+                                    <a href="" style="text-decoration: none;">
+                                        <img src="images/mercedes.jpg" alt="" class="img-news">
+                                        <h4 class="news-title2">Mercedes vê melhora no W13, mas adota tom cauteloso: “É um aprendizado constante”</h4>
+                                    </a>
                                 </div>
                             </div>
                         </div>
