--- a/index.html
+++ b/index.html
@@ -91,37 +91,77 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="row">
-                            <div class="col-3">
+                            <div class="col-lg-3 col-md-6 col-sm-12">
                                 <div class="news">
-                                    <a href="" style="text-decoration: none;">
+                                    <a href="#" style="text-decoration: none;">
                                         <img src="images/vettel.jpg" alt="" class="img-news">
                                         <h4 class="news-title2">Vettel diz que torceu por Schumacher contra Verstappen em GP da Inglaterra</h4>
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-3">
+                            <div class="col-lg-3 col-md-6 col-sm-12">
                                 <div class="news">
-                                    <a href="" style="text-decoration: none;">
+                                    <a href="#" style="text-decoration: none;">
                                         <img src="images/perez.jpg" alt="" class="img-news">
                                         <h4 class="news-title2">Red Bull vê Pérez como companheiro perfeito para Verstappen: “Não tenta brigar”</h4>
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-3">
+                            <div class="col-lg-3 col-md-6 col-sm-12">
                                 <div class="news">
-                                    <a href="" style="text-decoration: none;">
+                                    <a href="#" style="text-decoration: none;">
                                         <img src="images/zhou.jpg" alt="" class="img-news">
                                         <h4 class="news-title2">“Não sei como sobrevivi”: Zhou relata detalhes de acidente assustador em Silverstone</h4>
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-3">
+                            <div class="col-lg-3 col-md-6 col-sm-12">
                                 <div class="news">
-                                    <a href="" style="text-decoration: none;">
+                                    <a href="#" style="text-decoration: none;">
                                         <img src="images/mercedes.jpg" alt="" class="img-news">
                                         <h4 class="news-title2">Mercedes vê melhora no W13, mas adota tom cauteloso: “É um aprendizado constante”</h4>
                                     </a>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <h2 style="padding-top: 30px;">Vídeos</h2>
+                <div class="divisor"></div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="news">
+                                    <a href="https://www.youtube.com/watch?v=ambmvbwlxow&ab_channel=FORMULA1" style="text-decoration: none;" target="_blank">
+                                        <img src="images/top5.jpg" alt="" class="img-news">
+                                        <h4 class="news-title2">Top 5 Momentos Dramáticos | Grande Prêmio da Áustria</h4>
+                                    </a>
+                                </div> 
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="news">
+                                    <a href="https://m.youtube.com/watch?v=-jRT1plql4w&ab_channel=FORMULA1" style="text-decoration: none;" target="_blank">
+                                        <img src="images/vettel-willians.jpg" alt="" class="img-news">
+                                        <h4 class="news-title2">Sebastian Vettel Pilota a Icônica Williams de Nigel Mansell</h4>
+                                    </a>
+                                </div> 
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="news">
+                                    <a href="https://www.youtube.com/watch?v=bM6ren2tPU8&ab_channel=FORMULA1" style="text-decoration: none;" target="_blank">
+                                        <img src="images/turn1.jpg" alt="" class="img-news">
+                                        <h4 class="news-title2">Batida na Curva 1 | Grande Prêmio da Grã Bretanha</h4>
+                                    </a>
+                                </div> 
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="news">
+                                    <a href="https://www.youtube.com/watch?v=u3GQOVg1W6o&ab_channel=FORMULA1" style="text-decoration: none;" target="_blank">
+                                        <img src="images/gp-ing.jpg" alt="" class="img-news">
+                                        <h4 class="news-title2">Melhores momentos | Grande Prêmio da Grã Bretanha</h4>
+                                    </a>
+                                </div> 
                             </div>
                         </div>
                     </div>
