--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                 <div class="collapse navbar-collapse" id="nav-header">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="" class="nav-link links-header" target="_blank">Notícias</a>
+                            <a href="#" class="nav-link links-header" target="_blank">Notícias</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link links-header" target="_blank">Calendário</a>
+                            <a href="#" class="nav-link links-header" target="_blank">Calendário</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link links-header" target="_blank">Pilotos</a>
+                            <a href="#" class="nav-link links-header" target="_blank">Pilotos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link links-header" target="_blank">Equipes</a>
+                            <a href="#" class="nav-link links-header" target="_blank">Equipes</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link links-header" target="_blank">F2</a>
+                            <a href="#" class="nav-link links-header" target="_blank">F2</a>
                         </li>
                     </ul>
                 </div>
@@ -60,7 +60,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="row">
-                            <div class="col-8">
+                            <div class="col-md-8">
                                 <div class="news">
                                     <a href="" style="text-decoration: none;">
                                         <img src="images/sainz.jpg" alt="" class="img-news">
@@ -69,7 +69,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-4">
+                            <div class="col-md-4">
                                 <div class="next-gp">
                                     <div style="background-color: #e10600;"><h3 class="gp-title">Próximo GP</h3></div>
                                     <div class="gp">
@@ -171,7 +171,9 @@
     </main>
     <footer>
         <div class="container">
-            <img src="images/logo.png" alt="" width="100px">
+            <div class="img-footer">
+                <img src="images/logo.png" alt="" width="100px">
+            </div>      
             <p class="text-footer">&copy; 2003-2022 Formula One World Championship Limited</p>
         </div>
     </footer>
