--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                 <div class="collapse navbar-collapse" id="nav-header">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header" target="_blank">Notícias</a>
+                            <a href="#" class="nav-link links-header">Notícias</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header" target="_blank">Calendário</a>
+                            <a href="calendario.html" class="nav-link links-header">Calendário</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header" target="_blank">Pilotos</a>
+                            <a href="#" class="nav-link links-header">Pilotos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header" target="_blank">Equipes</a>
+                            <a href="#" class="nav-link links-header">Equipes</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header" target="_blank">F2</a>
+                            <a href="https://www.fiaformula2.com/" class="nav-link links-header" target="_blank">F2</a>
                         </li>
                     </ul>
                 </div>
