--- a/calendario.html
+++ b/calendario.html
@@ -134,6 +134,146 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP do Canadá</h1>
+                                    <h1 class="gp-info">19/06 - 15h</h1>
+                                    <img src="images/canada.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP da Inglaterra</h1>
+                                    <h1 class="gp-info">03/07 - 11h</h1>
+                                    <img src="images/inglaterra.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP da Áustria</h1>
+                                    <h1 class="gp-info">10/07 - 10h</h1>
+                                    <img src="images/austria-gp.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP da França</h1>
+                                    <h1 class="gp-info">24/07 - 10h</h1>
+                                    <img src="images/franca.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP da Hungria</h1>
+                                    <h1 class="gp-info">31/07 - 10h</h1>
+                                    <img src="images/hungria.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP da Bélgica</h1>
+                                    <h1 class="gp-info">28/08 - 10h</h1>
+                                    <img src="images/belgica.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP da Holanda</h1>
+                                    <h1 class="gp-info">04/09 - 10h</h1>
+                                    <img src="images/holanda.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP da Itália</h1>
+                                    <h1 class="gp-info">11/09 - 10h</h1>
+                                    <img src="images/italia.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP de Singapura</h1>
+                                    <h1 class="gp-info">02/10 - 9h</h1>
+                                    <img src="images/cingapura.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP do Japão</h1>
+                                    <h1 class="gp-info">09/10 - 2h</h1>
+                                    <img src="images/japao.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP dos EUA</h1>
+                                    <h1 class="gp-info">23/10 - 16h</h1>
+                                    <img src="images/eua2.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP do México</h1>
+                                    <h1 class="gp-info">30/10 - 17h</h1>
+                                    <img src="images/mexico.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP de São Paulo</h1>
+                                    <h1 class="gp-info">13/11 - 15h</h1>
+                                    <img src="images/brasil.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 col-sm-12">
+                                <div class="gp-calendar">
+                                    <h1 class="gp-name">GP de Abu Dhabi</h1>
+                                    <h1 class="gp-info">20/11 - 10h</h1>
+                                    <img src="images/abudhabi.jpg" alt="" width="100%">
+                                    <div style="text-align: center;">
+                                        <button class="calendar-button">Ver mais</button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
