--- a/calendario.html
+++ b/calendario.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <title>F1 Noticias</title>
+    <title>F1 Calendário</title>
 </head>
 
 <body>
@@ -33,7 +33,7 @@
                             <a href="#" class="nav-link links-header2">Calendário</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header">Pilotos</a>
+                            <a href="pilotos.html" class="nav-link links-header">Pilotos</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link links-header">Equipes</a>
