--- a/calendario.html
+++ b/calendario.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="nav-header">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header">Home</a>
+                            <a href="index.html" class="nav-link links-header">Home</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link links-header2">Calendário</a>
