--- a/pilotos.html
+++ b/pilotos.html
@@ -37,7 +37,7 @@
                             <a href="#" class="nav-link links-header2">Pilotos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header">Equipes</a>
+                            <a href="equipes.html" class="nav-link links-header">Equipes</a>
                         </li>
                         <li class="nav-item">
                             <a href="https://www.fiaformula2.com/" class="nav-link links-header" target="_blank">F2</a>
