--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                             <a href="calendario.html" class="nav-link links-header">Calendário</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header">Pilotos</a>
+                            <a href="pilotos.html" class="nav-link links-header">Pilotos</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link links-header">Equipes</a>
+                            <a href="equipes.html" class="nav-link links-header">Equipes</a>
                         </li>
                         <li class="nav-item">
                             <a href="https://www.fiaformula2.com/" class="nav-link links-header" target="_blank">F2</a>
